src/objects/Apttus_Country__c.object
<CustomObject>
    <description>Holds Country/Region list for Country Association and Exclusivity Associate functionality in Apttus application.</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Apttus_Country_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Apttus Country ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia and Oceania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central America and the Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East and North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-Saharan Africa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Apttus Country</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Apttus Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Apttus Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>